--- a/components/gridSystem/styles/Grid.module.scss
+++ b/components/gridSystem/styles/Grid.module.scss
@@ -1,15 +1,20 @@
 @import 'styles/variables.scss';
 
 .grid {
-  // position: absolute;
+  transition: opacity $transitionFast;
+  position: absolute;
   width: 100%;
   height: 100%;
   display: flex;
   flex-wrap: nowrap;
   flex-direction: column;
-  height: 100%;
   justify-content: space-between;
-  padding: calc(#{$grid-dot-height} * 2);
+  padding: $grid-dot-height;
+  opacity: 0;
+
+  &.show {
+    opacity: 1;
+  }
 
   .grid-row {
       display: flex;
