--- a/components/gridSystem/styles/GridDot.module.scss
+++ b/components/gridSystem/styles/GridDot.module.scss
@@ -6,6 +6,7 @@
   height: $grid-dot-height;
   border-radius: 50%;
   position: relative;
+  z-index: 2;
   @apply bg-purple-500;
 
   &::after {
@@ -19,8 +20,8 @@
       border-radius: 50%;
       @apply border-2 border-purple-500;
   }
-}
 
-.in-edit-mode {
-  z-index: 2;
+  &.is-resizing {
+    z-index: 0;
+  }
 }
