Bug fixing, renaming and clearing clutter

--- a/components/widgets/styles/WidgetResizerContainer.module.scss
+++ b/components/widgets/styles/WidgetResizerContainer.module.scss
@@ -1,7 +1,7 @@
 @import 'styles/variables.scss';
 $ballWidth: 22px;
 
-.resize-border-container {
+.resizer-container {
   transition: opacity $transitionFast;
   position: absolute;
   opacity: 0;
