Fixed widget resize bug on Chrome, other changes

--- a/components/layouts/styles/DashboardLayout.module.scss
+++ b/components/layouts/styles/DashboardLayout.module.scss
@@ -16,6 +16,6 @@
   .content {
     transition: border-radius $transitionMedium;
     height: calc(100vh - #{$navbarHeight});
-    @apply p-4 bg-gray-100 shadow-inner;
+    @apply bg-gray-100 shadow-inner;
   }
 }
