--- a/components/grid-system/styles/GridDot.module.scss
+++ b/components/grid-system/styles/GridDot.module.scss
@@ -7,7 +7,7 @@
   border-radius: 50%;
   position: relative;
   z-index: 1;
-  @apply bg-purple-500;
+  @apply bg-accent;
 
   &::after {
       content: "";
@@ -18,7 +18,7 @@
       width: calc(#{$grid-dot-height} * 2);
       height: calc(#{$grid-dot-height} * 2);
       border-radius: 50%;
-      @apply border-2 border-purple-500;
+      @apply border-2 border-accent;
   }
 
   &.is-resizing {
