--- a/components/layouts/styles/Sidebar.module.scss
+++ b/components/layouts/styles/Sidebar.module.scss
@@ -16,7 +16,7 @@
     .logo {
       transition: transform $transitionMedium;
       transform: translateX(calc(#{$sidebarWidth} - #{$sidebarWidth} / 4 + 1rem));
-      @apply font-bold text-2xl;
+      @apply font-bold text-2xl text-primary;
     }
   }
 
