--- a/components/layouts/styles/SidebarToggle.module.scss
+++ b/components/layouts/styles/SidebarToggle.module.scss
@@ -12,7 +12,7 @@
     transition: transform $transitionFast;
     transform: translateX(-30%);
     border-radius: 20px;
-    @apply w-full h-full absolute bg-purple-500 cursor-pointer;
+    @apply w-full h-full absolute bg-accent cursor-pointer;
   }
 
   &:hover {
