--- a/components/misc/styles/AlertTemplate.module.scss
+++ b/components/misc/styles/AlertTemplate.module.scss
@@ -1,7 +1,7 @@
 .alert {
   width: 90vw;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  @apply bg-white rounded-lg flex items-center p-4 relative;
+  @apply bg-primary rounded-lg flex items-center p-4 relative;
 
   .close {
     position: absolute;
