--- a/components/ui/styles/Button.module.scss
+++ b/components/ui/styles/Button.module.scss
@@ -27,17 +27,17 @@
 }
 
 .primary {
-  @apply bg-purple-500 text-white border-transparent border;
+  @apply bg-accent text-primary border-transparent border;
 }
 
 .secondary {
-  @apply border-purple-500 bg-purple-500 border-2 bg-transparent text-black;
+  @apply border-accent bg-accent border-2 bg-transparent text-black;
 }
 
 .danger {
-  @apply bg-red-600 text-white border-transparent;
+  @apply bg-red-600 text-primary border-transparent;
 }
 
 .disabled {
-  @apply bg-gray-300 text-gray-600;
+  @apply bg-secondary text-secondary;
 }
