--- a/components/ui/styles/Input.module.scss
+++ b/components/ui/styles/Input.module.scss
@@ -6,10 +6,10 @@
 
   .input {
     transition: all $transitionFast;
-    @apply w-full bg-gray-100 border-transparent border-2 px-4 py-2 rounded-lg mt-1;
+    @apply w-full bg-secondary border-transparent border-2 px-4 py-2 rounded-lg mt-1;
 
     &:focus {
-      @apply border-purple-500 border-2 bg-white;
+      @apply border-accent border-2 bg-primary;
     }
   }
 }
