--- a/components/ui/styles/Tabs.module.scss
+++ b/components/ui/styles/Tabs.module.scss
@@ -3,5 +3,5 @@
 }
 
 .active {
-  @apply text-purple-500 font-bold border-b-2 border-purple-500;
+  @apply text-accent font-bold border-b-2 border-accent;
 }
