--- a/components/ui/styles/Input.module.scss
+++ b/components/ui/styles/Input.module.scss
@@ -2,11 +2,26 @@
 
 .input-container {
   min-width: 200px;
-  @apply mt-2;
+
+  &:not(:first-of-type) {
+    @apply mt-2;
+  }
+
+  &.sm {
+    .input {
+      @apply px-2 py-1;
+    }
+  }
+
+  &.md {
+    .input {
+      @apply px-4 py-2;
+    }
+  }
 
   .input {
     transition: all $transitionFast;
-    @apply w-full bg-secondary border-transparent border-2 px-4 py-2 rounded-lg mt-1;
+    @apply w-full bg-secondary border-transparent border-2 rounded-lg mt-1;
 
     &:focus {
       @apply border-accent border-2 bg-primary;
