--- a/components/layouts/styles/DashboardNavbar.module.scss
+++ b/components/layouts/styles/DashboardNavbar.module.scss
@@ -2,7 +2,7 @@
 
 .navbar {
   height: $navbarHeight;
-  @apply flex justify-end items-center px-4;
+  @apply flex justify-end items-center px-4 bg-primary;
 
   .menu-container {
     @apply flex;
