--- a/components/layouts/styles/MainNavbar.module.scss
+++ b/components/layouts/styles/MainNavbar.module.scss
@@ -9,7 +9,7 @@
     @apply flex items-center justify-center;
 
     .logo {
-      @apply font-bold text-2xl;
+      @apply font-bold text-2xl flex;
     }
   }
 
