--- a/components/ui/styles/Dropdown.module.scss
+++ b/components/ui/styles/Dropdown.module.scss
@@ -1,7 +1,7 @@
 @import 'styles/variables.scss';
 
 .items-container {
-  @apply absolute right-0 bg-primary px-4 py-2 shadow rounded-lg flex flex-col;
+  @apply absolute right-0 bg-white px-4 py-2 shadow-md rounded-lg flex flex-col;
 
   .item {
     @apply whitespace-nowrap border-b border-secondary py-1 cursor-pointer;
