--- a/components/ui/styles/Modal.module.scss
+++ b/components/ui/styles/Modal.module.scss
@@ -1,5 +1,5 @@
 .modal {
-  @apply absolute top-2/4 left-2/4 bg-primary rounded-2xl p-4 md:p-6 shadow-md;
+  @apply absolute top-2/4 left-2/4 bg-white rounded-2xl p-4 md:p-6 shadow-md;
 }
 
 .overlay {
