--- a/components/widgets/styles/NotesModal.module.scss
+++ b/components/widgets/styles/NotesModal.module.scss
@@ -1,7 +1,7 @@
 @import 'styles/variables.scss';
 
 .width {
-  @apply w-5/6;
+  @apply w-full md:w-5/6;
 }
 
 .height {
@@ -10,18 +10,10 @@
 
 .list {
   transition: width $transitionMedium;
-  @apply w-full border-r-2;
-
-  &.show-editor {
-    @apply w-1/3 border-0;
-  }
+  @apply w-1/3 lg:w-1/4 border-r-2;
 }
 
 .editor-container {
   transition: width $transitionMedium;
-  @apply w-0;
-
-  &.show-editor {
-    @apply w-2/3;
-  }
+  @apply w-2/3 lg:w-3/4;
 }
