--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,7 +5,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Source Sans Pro', sans-serif;
-  @apply tracking-wide;
+  @apply tracking-wide text-primary;
 }
 
 a {
