--- a/components/ui/styles/Button.module.scss
+++ b/components/ui/styles/Button.module.scss
@@ -11,7 +11,7 @@
   @apply rounded-full tracking-wider;
 
   &.sm {
-    @apply px-4 py-1 text-base;
+    @apply px-4 py-1 text-sm leading-none;
   }
 
   &.md {
